photo upload done

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,6 +1,16 @@
-<h1>My Lists:</h1>
-<ul>
-  <% @lists.each do |list| %>
-    <li><%= link_to list.name, list_path(list) %></li>
-  <% end %>
-</ul>
+<div class="hero-image">
+  <div class="hero-text">
+    <h1>Watch List</h1>
+  </div>
+</div>
+
+<div class="list-container">
+  <h1>My Lists:</h1>
+
+  <ul class="show-list">
+    <% @lists.each do |list| %>
+      <li><%= link_to list.name, list_path(list) %></li>
+      <%# <li> <%= cl_image_tag(@list.photo.key, height: 300, width: 300, crop: :thumb)%></li>
+    <% end %>
+  </ul>
+</div>
